--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-image-gallery": "^1.0.7",
-    "react-qr-code": "^1.0.2"
+    "react-qr-code": "^1.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2"
   },
   "devDependencies": {
     "eslint-config-jquery": "^3.0.0",
